# AI_HW

AI/HW_0/: main.py
AI/HW_1/: WrittenPortion.md  npuzzle.py
AI/HW_2/: WrittenPortion.odt
AI/HW_3/: WrittenPortion.odt  an2804_lake.py
AI/HW_4/: an2804_hmm.py
AI/HW_5/: Homework_5_Report.odt  an2804_classifier.py
HW_1/: WrittenPortion.md  gradescope_full.md  npuzzle.py
HW_2/: WrittenPortion.odt
HW_2/othello/: an2804_ai.py
Security/HW_1/: homework1.tar.xz
Security/HW_1/student/: CMakeLists.txt  Dependencies.cmake  README.md
Security/HW_1/student/include/part0/: DetectionOracle.h  EncryptionOracle.h
Security/HW_1/student/include/part1/: ECBDecrypt.h  EncryptionOracle.h
Security/HW_1/student/include/part2/: CBCDecrypt.h
Security/HW_1/student/include/part3/: ECBDecrypt.h
Security/HW_1/student/include/part4/: PaddingOracle.h  PaddingOracleAttack.h
Security/HW_1/student/src/: CMakeLists.txt
Security/HW_1/student/src/part0/: CMakeLists.txt  DetectionOracle.cpp  main.cpp
Security/HW_1/student/src/part1/: CMakeLists.txt  ECBDecrypt.cpp  main.cpp
Security/HW_1/student/src/part2/: CBCDecrypt.cpp  CMakeLists.txt  main.cpp
Security/HW_1/student/src/part3/: CMakeLists.txt  ECBDecrypt.cpp  main.cpp
Security/HW_1/student/src/part4/: CMakeLists.txt  PaddingOracleAttack.cpp  main.cpp
Security/HW_1/student/src/part5/: part5.txt
Security/HW_2/: homework2.tar.xz
Security/HW_2/student/: client.py  create_submission.sh  grader.py
Security/HW_2/student/attacker_server/: server.py
Security/HW_2/student/server/: server.py
Security/HW_2/student/server/flags/: high.txt  low.txt  medium.txt
Security/HW_2/student/server/templates/: index.html  xss.html
Security_II/HW_1/: an2804.md  ikev2_with_certificates.pcap  ssol_capture.pcapng
Security_II/HW_2/: Report.md
Security_II/HW_3/: ngrams.py  report.md
Security_II/HW_4/: an2804.md
UID/HW_1/: Class_policies.odt  Example1_postive.odt  Example2_positive.odt  Example3_negative.odt  Example4_negative.odt
UID/HW_11/: get_images.sh  scrapeImages.py  write-up.md
UID/HW_11/ChessApp/: server.py
UID/HW_11/ChessApp/static/: chess-game.js
UID/HW_11/ChessApp/templates/: quiz-game.html  view-game.html  view_item.html
UID/HW_13/: improvements.txt  writeup.md
UID/HW_13/ChessApp/: models.py  server.py
UID/HW_13/ChessApp/static/: chess-game.js  quiz-game.js
UID/HW_13/ChessApp/templates/: index.html  layout.html  quiz-game.html  view-game.html
UID/HW_2/: 1_Invitation.html  1_Invitation_writeup.md  3_Tinder.html  3_Tinder_Writeup.md  4_My_info_design.html  4_My_info_design_writeup.html  Tinder-Annotation.md  Tinder.html
UID/HW_3/: 1_twitter-home.html  1_twitter-report.md  2_twitter-account.html  2_twitter-account.md  3_gestault-examples.md  README.md
UID/HW_4/: 1_post_tweet.html  2_color_and_font.md  3_user_interaction.md
UID/HW_5/: 1_log_sales.html  1_log_sales.js  2_ppc.html  2_ppc.js
UID/HW_6/infinity_paper/: server.py
UID/HW_6/infinity_paper/static/: 2_ppc.js  cu-paper-infinity.js  ppc.js
UID/HW_6/infinity_paper/templates/: ppc.html
UID/HW_6/report/: report.md
UID/HW_7/: hw7_writeup.md  players.json  scraper.py
UID/HW_7/bbHOF/: server.py
UID/HW_7/bbHOF/templates/: add-item.html  layout.html  search.html
UID/HW_8/: players2.json
UID/HW_8/bbHOF/: server.py
UID/HW_8/bbHOF/static/: add-player.js  bbHOF.js  search-player.js
UID/HW_8/bbHOF/templates/: add-item.html  infinity.html  layout.html  search.html  view_item.html
